[package]
name = "anyerror"
version = "0.1.4"
edition = "2021"
authors = [ "Zhang Yanpo <drdr.xp@gmail.com>" ]

# categories = ["error"]
description = "A type of any error for transport"
documentation = "https://docs.rs/anyerror"
homepage = "https://github.com/drmingdrmer/anyerror"
keywords = ["error", "any"]
license = "Apache-2.0"
repository = "https://github.com/drmingdrmer/anyerror"
readme = "README.md"

[dependencies]
anyhow = { version = "1.0.32", optional = true }
backtrace = "0.3.63"
serde = { version="1", features=["derive"] }

[dev-dependencies]
anyhow = "1.0.32"
serde_json = "1.0.74"



[features]
default = []
# anyhow = ["anyhow"]
# anyhow = []
# docinclude = [] # Used only for activating `doc(include="...")` on nightly.

[package.metadata.docs.rs]
# features = ["docinclude"] # Activate `docinclude` during docs.rs build.
